# demo-checkout-service

./: .env.example  .gitignore  AWS_CLEANUP_COMMANDS.md  DEPLOYMENT_CORRELATION_SCENARIO.md  GITHUB_ACTIONS_SETUP.md  LAMBDA_CONFIG.md  LOCAL_TESTING.md  README.md  TERRAFORM_DEPLOYMENT_FIXES.md  pyproject.toml
.github/workflows/: deploy.yml
scripts/: package.sh  test_local.py  trigger_traffic.py
src/: __init__.py  error_injector.py  lambda_handler.py
terraform/: main.tf  variables.tf
terraform/modules/lambda/: main.tf  variables.tf
tests/: test_lambda_handler.py
